@@ -125,6 +125,7 @@
                            'Cisco::Catalyst_3560' => 'Cisco Catalyst 3560',
                            'Cisco::Catalyst_3750' => 'Cisco Catalyst 3750',
                            'Cisco::Catalyst_4500' => 'Cisco Catalyst 4500 Series',
+                           'Cisco::Catalyst_6500' => 'Cisco Catalyst 6500 Series',
                            'Cisco::ISR_1800' => 'Cisco ISR 1800 Series',
                            'Cisco::WiSM' => 'Cisco WiSM',
                            'Cisco::WLC_2106' => 'Cisco Wireless Controller (WLC) 2106',
